--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/fonts": "^0.10.3",
+    "@nuxt/icon": "^1.10.3",
+    "@nuxt/image": "^1.9.0",
+    "@nuxt/scripts": "^0.9.5",
+    "@nuxtjs/fontaine": "^0.4.4",
+    "@nuxtjs/seo": "^2.1.1",
+    "@primevue/nuxt-module": "^4.2.5",
     "nuxt": "^3.15.4",
+    "nuxt-booster": "^3.1.10",
+    "nuxt-vitalizer": "^0.10.0",
     "vue": "latest",
     "vue-router": "latest"
   }
