--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/scripts": "^0.9.5",
     "@nuxtjs/fontaine": "^0.4.4",
     "@nuxtjs/seo": "^2.1.1",
+    "@nuxtjs/supabase": "^1.4.6",
     "@primevue/nuxt-module": "^4.2.5",
     "nuxt": "^3.15.4",
     "nuxt-booster": "^3.1.10",
