--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "nuxt-vitalizer": "^0.10.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.16"
   }
 }
